--- a/src/css/am.css
+++ b/src/css/am.css
@@ -8,7 +8,7 @@
 
 .center {
     position: absolute;
-     width: 100px;
+    width: 100px;
     height: 50px; 
     top: 50%;
     left: 50%;
@@ -28,4 +28,20 @@ body
 #canv{
     width: 100%;
     height: auto;
+}
+
+img,.above{
+    position: absolute;
+
+    z-index: 1;
+}
+
+a{
+    outline:none
+}
+
+@import url('https://fonts.googleapis.com/css?family=Allan');
+.cp{
+    font-family: 'Allan', cursive;
+    color: white;
 }
